# MicroClaw

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  config.example.yaml  docker-compose.yaml  my-compose.yaml  pyproject.toml  transaction_manager.py
.ai/: ARCHITECTURE.md  CORE_LOGIC.md  DEVELOPMENT_STATE.md  MANIFEST_INDEX.md  PROJECT_CONTEXT.md  SOPs.md
microclaw/: cli.py  dto.py  logging.py  resolver.py  service.py  settings.py  utils.py
microclaw/agents/: __init__.py  agent.py  checkpointer.py  cli.py  dto.py  settings.py
microclaw/agents/subagents/: __init__.py  settings.py  toolkit.py
microclaw/agents/templates/: agent_prompt.j2  extract_dialogue_info_daily_prompt.j2  extract_dialogue_info_prompt.j2  summarize_dialogue_prompt.j2  (+2 more)
microclaw/channels/: __init__.py  base.py  context.py  fabric.py  interfaces.py  settings.py  utils.py
microclaw/cron/: __init__.py  base.py  cli.py  cron.py  fabric.py  settings.py
microclaw/sessions_storages/: __init__.py  fabric.py  filters.py  interfaces.py  settings.py
microclaw/stt/: __init__.py  dto.py  settings.py  stt.py
microclaw/syncers/: __init__.py  fabric.py  interfaces.py  settings.py
microclaw/toolkits/: __init__.py  base.py  enums.py  exceptions.py  fabric.py  settings.py
microclaw/users_storages/: __init__.py  fabric.py  interfaces.py  settings.py
microclaw/utils/: __init__.py  types.py  utils.py
tests/: conftest.py  factories.py  test_resolver.py
tests/agents/: test_agent.py  test_checkpointer.py  test_interrupt.py  test_interrupt_bubble_up.py
tests/channels/: test_base_channel.py  test_channel_interrupt.py  test_telegram_channel.py
(+171 files in other folders)
