[project]
name = "microclaw"
version = "0.1.0"
description = "AI agent micro framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "apscheduler>=3.10.4",
    "facet>=0.10.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "pyyaml-env-tag>=1.1",
    "pyyaml-include>=2.2",
    "tiktoken>=0.8.0",
    "typer>=0.21.1",
    "langchain>=1.2.10",
    "langchain-core>=1.2.16",
    "langchain-mcp-adapters>=0.1.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
telegram = [
    "aiogram>=3.25.0",
    "aiohttp>=3.13.3",
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    "yarl>=1.22.0",
]
matrix = [
    "mautrix>=0.21.0",
]
openai = [
    "langchain-openai>=1.1.10",
]
cloudru = [
    "evolution-langchain>=1.0.0",
]
ollama = [
    "langchain-ollama>=0.1.0",
]
database = [
    "sqlmodel>=0.0.38",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "pydantic-filters>=0.3.5",
]
caldav = [
    "caldav@git+https://github.com/python-caldav/caldav@issue642-clean",
]
tasks = [
    "caldav@git+https://github.com/python-caldav/caldav@issue642-clean",
]
audio_tags = [
    "mutagen>=1.47.0",
]
carddav = [
    "aiohttp>=3.13.3",
    "vobject>=0.9.9",
]
webdav = [
    "aiodav>=0.1.14",
]
email = [
    "aioimaplib>=0.9.11",
    "aiosmtplib>=3.0.1",
]
a2a = [
    "a2a>=0.1.0",
]
nextcloud_tasks = [
    "nextcloud-tasks-api>=0.0.5",
]
homeassistant = [
    "homeassistant-api>=4.3.0",
]
discogs = [
    "python3-discogs-client>=2.7.0",
]
